--- a/lib/python/vdm/templates/index.html
+++ b/lib/python/vdm/templates/index.html
@@ -113,7 +113,7 @@
                 <h1>Overview</h1>
               </div>
               <div class="mainTbl">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="adminTbl">
+                <table width="100%" border="0" cellspacing="0" cellpadding="0" id="adminTbl" class="adminTbl">
                   <tr>
                     <td width="42%" class="configLabel">Site per host</td>
                     <td id="sitePerHost" width="45%" align="right" >
@@ -155,7 +155,7 @@
                              <td class="configLabel">Username</td>
                              <td>Role</td>
                              <td>&nbsp;</td>
-                            <td><a id="btnAddSecurity" href="javascript:void(0);" data-toggle="modal" data-target="#plusSecurity"><span class="plusIcon"></span></td>
+                            <td><a id="btnAddSecurity" class="plusIcon" href="javascript:void(0);" data-toggle="modal" data-target="#plusSecurity"></td>
 
                   </tr>
                   <tr class="hasSubLabel parent" id="row-1">
